---
source: tests/compare.rs
info: ergo2024_breaking_only
---
Difference on `[[&mut x]]: [&mut [&T]]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[[&mut x]]: &mut [[&T]]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &[&mut T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &[&mut [T]]`:
  type-based returned: Success([T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &[&mut &T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &&[&mut T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &&mut [&mut T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &mut [&&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &mut &[&mut T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&x]: &mut [&&mut T]`:
  type-based returned: TypeError("MutBorrowBehindSharedBorrow")
    bm-based returned: Success(&mut &mut T)
Difference on `[&ref x]: &[&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &[&mut [T]]`:
  type-based returned: Success(&&mut [T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &[&mut &T]`:
  type-based returned: Success(&&mut &T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &[&mut &mut T]`:
  type-based returned: Success(&&mut &mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &&[&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &&mut [&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut &[&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut [x]]: &mut [&[T]]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut &x]: &mut [&T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut &x]: &mut [&[T]]`:
  type-based returned: Success([T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut &x]: &mut [&&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut &x]: &mut &mut [&T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut &mut x]: &mut [&mut &T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut x]: &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut x]: &mut [&[T]]`:
  type-based returned: Success(&[T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut x]: &mut [&&T]`:
  type-based returned: Success(&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut x]: &mut [&&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut x]: &mut &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut mut x]: &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut mut x]: &mut [&[T]]`:
  type-based returned: Success(&[T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut mut x]: &mut [&&T]`:
  type-based returned: Success(&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut mut x]: &mut [&&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut mut x]: &mut &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref x]: &mut [&T]`:
  type-based returned: Success(&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref x]: &mut [&[T]]`:
  type-based returned: Success(&&[T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref x]: &mut [&&T]`:
  type-based returned: Success(&&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref x]: &mut [&&mut T]`:
  type-based returned: Success(&&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref x]: &mut &mut [&T]`:
  type-based returned: Success(&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref mut x]: &mut [&T]`:
  type-based returned: Success(&mut &T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref mut x]: &mut [&[T]]`:
  type-based returned: Success(&mut &[T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref mut x]: &mut [&&T]`:
  type-based returned: Success(&mut &&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref mut x]: &mut [&&mut T]`:
  type-based returned: Success(&mut &&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&mut ref mut x]: &mut &mut [&T]`:
  type-based returned: Success(&mut &T)
    bm-based returned: TypeError("mismatched types")
Difference on `&[&mut x]: &&mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `&[x]: &&mut [&mut T]`:
  type-based returned: TypeError("MutBorrowBehindSharedBorrow")
    bm-based returned: Success(&mut &mut T)
Difference on `&mut [&mut x]: &mut &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
